--- a/html/style.css
+++ b/html/style.css
@@ -1,21 +1,30 @@
+body.white{
+  background: white;
+  color: black;
+}
 
-      header{
-        border-bottom:1px solid gray;
+body.black{
+  background: black;
+  color: white;
+}
+
+header{
+  border-bottom:1px solid gray;
         padding:20px;
-      }
-      nav{
-        border-right: 1px solid gray;
-        width: 200px;
-        height: 600px;
-        float: left;
-      }
-      nav ol{
-        list-style:none;
-      }
-      article{
-        float: left;
-        padding: 20px;
-      }
-      h2{
-          font-size: 50px;
-        }
+}
+nav{
+  border-right: 1px solid gray;
+  width: 200px;
+  height: 600px;
+  float: left;
+}
+nav ol{
+  list-style:none;
+}
+article{
+  float: left;
+  padding: 20px;
+}
+#control{
+  float: right;
+}
